[tool.poetry]
name = "hotel-bot"
version = "0.1.0"
description = ""
authors = ["Kate <keko.unte@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyTelegramBotAPI= "^4.7.1"
python-dotenv= "^0.21.0"
python-telegram-bot-calendar= "^1.0.5"
requests= "^2.28.1"
peewee= "^3.15.4"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
